--- a/ThreeorMoreConsole/ThreeorMoreConsole.csproj
+++ b/ThreeorMoreConsole/ThreeorMoreConsole.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Die.cs" />
+    <Compile Include="HistoryEntry.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
